// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyboard-accessibility.ts: Backspace after opening existing date should delete it 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: Type in (slightly) misformatted en-GB date using input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1582934400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: Type in a (slightly) misformatted hu (Hungarian) date using input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1582934400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: Type in date using input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1582934400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: Type in en-GB date using input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1582934400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: Type in hu-HU (Hungarian) date using input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1582934400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`keyboard-accessibility.ts: When incrementing year by one, rolls over or back day when day doesn't exist in new year 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1614470400000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
